// proto/identity/v1/user.proto

syntax = "proto3";

package identity.v1;

option go_package = "core-platform/proto/identity";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message User {
  string user_id = 1;
  string username = 2;
  string display_name = 3;
  string bio = 4;
  string avatar_url = 5;
  int64 created_at = 6;
}

message GetUserResponse {
  User user = 1;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3; // en clair, on hash côté serveur
  optional string display_name = 4;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateProfileRequest {
  string user_id = 1;
  optional string display_name = 2;
  optional string bio = 3;
  optional string avatar_url = 4;
}

message UpdateProfileResponse {
  User user = 1;
}